--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,14 @@
-{
+//{
 
-    "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=ManagerSalesTestProject;Username=postgres; Password=marat321;"
-    },
-    "Logging": {
-        "LogLevel": {
-
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    }
-}
+   // "ConnectionStrings": {
+  //      "DefaultConnection": "Host=localhost;Port=5432;Database=ManagerSalesTestProject;Username=postgres; Password=admin;"
+//},
+ //   "Logging": {
+  //      "LogLevel": {
+//
+//"Default": "Information",
+  //          "Microsoft": "Warning",
+     //       "Microsoft.Hosting.Lifetime": "Information"
+   //     }
+  //  }
+//
